[gd_scene load_steps=8 format=3 uid="uid://cwx4ps7nr715s"]

[ext_resource type="Script" uid="uid://nkjs6gp505yc" path="res://game/healthbar/healthbar.gd" id="1_oxsi7"]
[ext_resource type="Texture2D" uid="uid://tyaiqsfrmbee" path="res://assets/ui/HealthbarTop.png" id="2_fv03a"]
[ext_resource type="Texture2D" uid="uid://cwf5ihgu2x5k5" path="res://assets/ui/HealthbarBottom.png" id="3_tue3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hoxgt"]
bg_color = Color(0.0648083, 0.11, 0.0165, 0.505882)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o76um"]
bg_color = Color(1, 0.64, 0.1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fanj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxu8y"]
bg_color = Color(0.24495, 0.69, 0.069, 1)

[node name="Healthbar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 44.0
offset_bottom = 49.0
script = ExtResource("1_oxsi7")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = 10
layout_mode = 1
offset_top = 7.0
offset_right = 320.0
offset_bottom = 39.0
scale = Vector2(0.98983854, 0.51376766)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hoxgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_o76um")
value = 70.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 10
layout_mode = 1
offset_top = 7.0
offset_right = 320.0
offset_bottom = 39.0
scale = Vector2(0.98983854, 0.51376766)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_2fanj")
theme_override_styles/fill = SubResource("StyleBoxFlat_sxu8y")
value = 50.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="UpperDecoration" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = -9.0
offset_right = 1599.0
offset_bottom = 94.0
scale = Vector2(0.195, 0.195)
texture = ExtResource("2_fv03a")

[node name="LowerDecoration" type="TextureRect" parent="UpperDecoration"]
layout_mode = 0
offset_left = 605.1282
offset_top = 174.35901
offset_right = 989.1282
offset_bottom = 289.359
texture = ExtResource("3_tue3n")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
